[gd_scene load_steps=4 format=3 uid="uid://b0twaowsp1njy"]

[ext_resource type="Script" path="res://scenes/shop_relic.gd" id="1_j0ixy"]
[ext_resource type="Texture2D" uid="uid://hva3iy5hon7a" path="res://place_holder_art/tile_0089.png" id="2_y2tvp"]
[ext_resource type="Texture2D" uid="uid://dhmtctwb5ymhc" path="res://place_holder_art/gold.png" id="3_sp4q5"]

[node name="ShopRelic" type="VBoxContainer"]
custom_minimum_size = Vector2(100, 80)
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/separation = 15
alignment = 1
script = ExtResource("1_j0ixy")

[node name="RelicContainer" type="CenterContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 0

[node name="Icon" type="TextureRect" parent="RelicContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
texture = ExtResource("2_y2tvp")
expand_mode = 1

[node name="BuyButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "999"
icon = ExtResource("3_sp4q5")
expand_icon = true

[connection signal="gui_input" from="RelicContainer" to="." method="_on_relic_container_gui_input"]
[connection signal="mouse_entered" from="RelicContainer" to="." method="_on_relic_container_mouse_entered"]
[connection signal="mouse_exited" from="RelicContainer" to="." method="_on_relic_container_mouse_exited"]
[connection signal="pressed" from="BuyButton" to="." method="_on_buy_button_pressed"]
